--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "firebase": "^12.9.0",
     "ldrs": "^1.1.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
